Add project files

--- a/HealthME!/index.html
+++ b/HealthME!/index.html
@@ -17,7 +17,7 @@
                          class="iconography-image" loading="lazy">
                 </a>
                 <a href="../Home/index.html" class="nav-link">Home</a>
-                <a href="../Contact/index.html" class="contact-link">Support</a>
+                <!--<a href="../Contact/index.html" class="contact-link">Support</a>-->
                 <a href="../HealthME!/index.html" class="nav-link">HealthMe</a>
             </div>
         </header>
