--- a/Home/index.html
+++ b/Home/index.html
@@ -22,8 +22,8 @@
             </div>
         </header>
 
-           <!-- Stress & Energy Tracker -->
-           <div class="stress-energy-tracker-wrapper">
+        <!-- Stress & Energy Tracker -->
+        <div class="stress-energy-tracker-wrapper">
             <div class="stress-energy-tracker-container">
                 <h2>Stress & Energy Level Tracker</h2>
                 <div class="slider-container">
@@ -44,18 +44,17 @@
         </div>
 
         <!-- How do you feel today -->
-                <!-- Emotion Boxes -->
         <div class="emotion-section">
-        <h2 class="feel-today-title">How do you feel today?</h2>
-        <div class="emotion-boxes">
-            <div class="emotion-box" data-emotion="happy">😊<span>Happy</span></div>
-            <div class="emotion-box" data-emotion="sad">😢<span>Sad</span></div>
-            <div class="emotion-box" data-emotion="anxious">😰<span>Anxious</span></div>
-            <div class="emotion-box" data-emotion="angry">😡<span>Angry</span></div>
-            <div class="emotion-box" data-emotion="depressed">😞<span>Depressed</span></div>
-            <div class="emotion-box" data-emotion="stressed">😤<span>Stressed</span></div>
+            <h2 class="feel-today-title">How do you feel today?</h2>
+            <div class="emotion-boxes">
+                <div class="emotion-box" data-emotion="happy" onclick="triggerPopup('Happy')">😊<span>Happy</span></div>
+                <div class="emotion-box" data-emotion="sad" onclick="triggerPopup('Sad')">😢<span>Sad</span></div>
+                <div class="emotion-box" data-emotion="anxious" onclick="triggerPopup('Anxious')">😰<span>Anxious</span></div>
+                <div class="emotion-box" data-emotion="angry" onclick="triggerPopup('Angry')">😡<span>Angry</span></div>
+                <div class="emotion-box" data-emotion="depressed" onclick="triggerPopup('Depressed')">😞<span>Depressed</span></div>
+                <div class="emotion-box" data-emotion="stressed" onclick="triggerPopup('Stressed')">😤<span>Stressed</span></div>
+            </div>
         </div>
-    </div>
 
         <!-- Progress Circle (Initially hidden) -->
         <div class="progress-circle-container" style="display: none;">
@@ -106,9 +105,17 @@
             </div>
         </div>
 
-     
-
-        <!-- Satisfaction Question -->
+        <!-- Popup for consent -->
+<div id="popup" class="popup">
+    <div class="popup-content">
+        <h2>Would you like to explore activities for feeling <span id="emotion-name"></span>?</h2>
+        <div class="popup-buttons">
+            <button id="yes-btn">Yes</button>
+            <button id="no-btn">No</button>
+        </div>
+    </div>
+</div>
+ <!-- Satisfaction Question -->
         <div class="satisfaction-question-container" id="satisfaction-question">
             <h2>Are you satisfied with the tasks completed?</h2>
             <div class="satisfaction-question">
@@ -116,10 +123,7 @@
                 <button id="no-button">No</button>
             </div>
         </div>
-        <div class="cheer-up-message" style="display: none;">
-            <h2>Remember, you're amazing and loved! Keep smiling 😊</h2>
-        </div>
-        
+
         <div class="bottom-message">
             Hope we make you feel better :)
         </div>
